--- a/configurations/plot_independent_channels_geophone_2.yaml
+++ b/configurations/plot_independent_channels_geophone_2.yaml
@@ -26,6 +26,9 @@ plotting:
 day_plotting:
   time_interval_one_row: 1440  # In minutes
 
+# Format of figure file
+fig_format: svg  # png, eps, pdf
+
 # Verbosing
 verbose: True
 
@@ -58,6 +61,9 @@ plotting:
 day_plotting:
   time_interval_one_row: 1440  # In minutes
 
+# Format of figure file
+fig_format: svg  # png, eps, pdf
+
 # Verbosing
 verbose: True
 
@@ -89,6 +95,9 @@ plotting:
 # Day plotting
 day_plotting:
   time_interval_one_row: 1440  # In minutes
+
+# Format of figure file
+fig_format: svg  # png, eps, pdf
 
 # Verbosing
 verbose: True
