--- a/configurations/spectrograms.yaml
+++ b/configurations/spectrograms.yaml
@@ -1,6 +1,6 @@
 # Data path
 paths:
-  path_data: ./data/CSIC_LaPalma_Geophone 1_X/  # Path to input datafiles
+  path_data: ./data/CSIC_LaPalma_Geophone1_X/  # Path to input datafiles
   path_output: ./results/spectrogram_plots    # Path for output data (results)
 
 # Date range to plot
@@ -17,11 +17,12 @@ data_format:
   format_in:  PICKLE  # Format of input datafiles
 
 # Spectrograms (see function librosa.stft)
-Spectrogram:
+spectrogram:
   win_length: 1024
   hop_length: 64
   n_fft: 4096
   window: 'hann'
+  spec_interval: 86400  # Spectrogram interval in seconds
 
 # Plotting
 plotting:
@@ -35,6 +36,9 @@ plotting:
 # Day plotting
 day_plotting:
   time_interval_one_row: 1440  # In minutes
+
+# Format of figure file
+fig_format: svg  # png, eps, pdf
 
 # Verbosing
 verbose: True
