--- a/configurations/preprocessingLaPalma.yaml
+++ b/configurations/preprocessingLaPalma.yaml
@@ -1,7 +1,7 @@
 # Data path
 paths:
   path_data: ./data/LaPalma/  # Path to input datafiles
-  path_output: ./data    # Path for output data (results)
+  path_output: ./results    # Path for output data (results)
 
 # Data information
 data_info:
